tests/miniJava/pos/001259_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new java ( ) ) while ( 0 ) { } } }
