tests/miniJava/neg/005853_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { new { } } }
